finished the project

--- a/.lando.yml
+++ b/.lando.yml
@@ -9,4 +9,4 @@ tooling:
       - composer install
       - cp .env.example .env
       - php artisan key:generate
-      - php artisan db:seed
+      - lando php artisan migrate --seed
